--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         With over 3 years of experience, I specialize in developing and delivering ERP solutions using SAP ABAP. I began my career as an ABAP Developer Trainee, gaining foundational knowledge, and have since progressed to working extensively on Core ABAP and S/4HANA environments.</p>
 
                     <p class="attention-getter">
-                        Key Expertise:
+                       <b>Key Expertise:</b> 
                      </p>
                      <p class="attention-getter">
                         SAP ABAP Development: Proficient in Core ABAP, including Data Dictionary (DDIC), Object-Oriented ABAP (OOABAP), classes, and modular programming.
