--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 </div>
           
                 <div class="column xl-6 tab-12">                    
-                    <a href="href="https://drive.google.com/file/d/1MHczQnY7Uelz1LohR7-frCPo0KQqwQ1B/view?usp=drive_link" class="btn btn--stroke btn--large u-fullwidth">Get My CV</a>
+                    <a href="https://drive.google.com/file/d/1MHczQnY7Uelz1LohR7-frCPo0KQqwQ1B/view?usp=drive_link" class="btn btn--stroke btn--large u-fullwidth">Get My CV</a>
                 </div>
             
             </div> <!-- end section-footer__buttons -->              
